address comment
Signed-off-by: PoAn Yang <payang@apache.org>