@@ -24,7 +24,6 @@ import org.slf4j.Logger;
 
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 
 /**
  * A delayed operation using CompletionFutures that can be created by KafkaApis and watched
@@ -57,7 +56,7 @@ public class DelayedFuture<T> extends DelayedOperation {
             log.trace("All futures have been completed or have errors, completing the delayed operation");
             return forceComplete();
         } else {
-            log.trace(pending + " future still pending, not completing the delayed operation");
+            log.trace("{} future still pending, not completing the delayed operation", pending);
             return false;
         }
     }
@@ -68,7 +67,7 @@ public class DelayedFuture<T> extends DelayedOperation {
      */
     @Override
     public void onComplete() {
-        List<CompletableFuture<T>> pendingFutures = futures.stream().filter(future -> !future.isDone()).collect(Collectors.toList());
+        List<CompletableFuture<T>> pendingFutures = futures.stream().filter(future -> !future.isDone()).toList();
         log.trace("Completing operation for {} futures, expired {}", futures.size(), pendingFutures.size());
         pendingFutures.forEach(future -> future.completeExceptionally(new TimeoutException("Request has been timed out after " + timeoutMs + " ms")));
         responseCallback.run();
